--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# From Github
 # Built application files
 *.apk
 *.ap_
@@ -53,3 +54,15 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+# From Android Studio
+*.iml
+.gradle
+/local.properties
+.idea
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
